[package]
name    = "coin-shuffle-contracts-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
thiserror   = { version = "1.0.38" }
rustc-hex   = { version = "2.1.0" }
url         = { version = "2.3.1" }

[dependencies.ethers]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[build-dependencies]
eyre = "0.6.8"
serde_json = "1.0"

[build-dependencies.ethers]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"
features = ["abigen", "ethers-solc"]
