[package]
name    = "coin-shuffle-contracts-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1.64"
thiserror   = { version = "1.0.38" }
rustc-hex   = { version = "2.1.0" }
url         = { version = "2.3.1" }
serde       = { version = "1.0.152", features = ["derive"], optional = true }

[build-dependencies]
eyre = "0.6.8"
serde_json = "1.0"

[dependencies.ethers-middleware]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"
default-features = false

[dependencies.ethers-signers]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[dependencies.ethers-providers]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[dependencies.ethers-core]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[dependencies.ethers-contract]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[build-dependencies.ethers-contract]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"

[build-dependencies.ethers-solc]
git = "https://github.com/gakonst/ethers-rs.git"
branch = "master"
