[package]
name    = "coin-shuffle-contracts-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1.64"
thiserror   = { version = "1.0.38" }
rustc-hex   = { version = "2.1.0" }
url         = { version = "2.3.1" }
serde       = { version = "1.0.152", features = ["derive"], optional = true }
ethers-contract = { version = "2" }
ethers-core = { version = "2" }
ethers-providers = { version = "2" }
ethers-middleware = { version = "2", default-features = false }
ethers-signers = { version = "2" }

[build-dependencies]
eyre = "0.6.8"
serde_json = "1.0"
ethers-solc = "2"
ethers-contract = "2"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["test-util", "macros"] }
